Added Contact Componet and added delete functionality on it

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.heading{
+  font-size: 1.2rem;
+  color:  #1986BB;
+}
+
+.status{
+  font-size: 1.2rem;
+  color: #787977;
+}
